--- a/books/trask_deep_learning/code/playground.ipynb
+++ b/books/trask_deep_learning/code/playground.ipynb
@@ -1,6 +1,375 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3 Introduction to neural Prediciton"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_neural_network(input, weight):\n",
+    "    prediction = input * weight\n",
+    "    return prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8500000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight = 0.1\n",
+    "number_of_toes = [8.5,9.5,10,9]\n",
+    "input = number_of_toes[0]\n",
+    "pred = simple_neural_network(input,weight)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multi_input_nn(input_vector,weight_vector):\n",
+    "    pred_vector = input_vector * weight_vector\n",
+    "    pred = pred_vector.sum(axis=1)\n",
+    "    return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toes = np.array([8.5,9.5,9.9,9.0])\n",
+    "wlrec = np.array([0.65,0.8,0.8,0.9])\n",
+    "nfans = np.array([1.2,1.3,0.5,1.0])\n",
+    "weights = np.array([0.1,0.2,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_array = np.array([toes,wlrec,nfans]).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 3)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = multi_input_nn(input_array,weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.98, 1.11, 1.15, 1.08])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mult_input_and_output_nn(inputs,weights):\n",
+    "    preds = np.dot(weights,inputs)\n",
+    "    return preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toes = np.array([8.5,9.5,9.9,9.0])\n",
+    "wlrec = np.array([0.65,0.8,0.8,0.9])\n",
+    "nfans = np.array([1.2,1.3,0.5,1.0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = np.array([[0.1,0.1,-0.3],[0.1,0.2,0.0],[0.0,1.3,0.1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.1,  0.1, -0.3],\n",
+       "       [ 0.1,  0.2,  0. ],\n",
+       "       [ 0. ,  1.3,  0.1]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8.5 , 0.65, 1.2 ])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array[0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array[0,:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8.5 , 0.65, 1.2 ]])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array[0,:].reshape(1,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = mult_input_and_output_nn(input_array[0,:],weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.555, 0.98 , 0.965])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2135 0.145  0.5065]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multi_layer_nn(inputs,weights):\n",
+    "    #output of input layer feeds into hidden layer which feeds out to pred (output layer)\n",
+    "    hid = inputs.dot(weights[0])\n",
+    "    pred = hid.dot(weights[1])\n",
+    "    \n",
+    "    return pred\n",
+    "\n",
+    "toes = np.array([8.5,9.5,9.9,9.0])\n",
+    "wlrec = np.array([0.65,0.8,0.8,0.9])\n",
+    "nfans = np.array([1.2,1.3,0.5,1.0])\n",
+    "input_array = np.array([toes,wlrec,nfans]).transpose()\n",
+    "\n",
+    "ih_wgt = np.array([[0.1,0.2,-0.1],[-0.1,0.1,0.9],[0.1,0.4,0.1]]).T\n",
+    "hp_wgt = np.array([[0.3,1.1,-0.3],[0.1,0.2,0.0],[0.0,1.3,0.1]]).T\n",
+    "weights_multi = [ih_wgt,hp_wgt]\n",
+    "\n",
+    "pred = multi_layer_nn(input_array[0,:],weights_multi)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
